crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@473.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_intersect_agg(nmr) from (values ('{[1,6], [10,12]}'::nummultirange)) t(nmr);"
---
SelectStmt@0..89
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..26 "range_intersect_agg"
      Ascii40@26..27 "("
      ColumnRef@27..30
        Ident@27..30 "nmr"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  From@32..36 "from"
  Whitespace@36..37 " "
  Ascii40@37..38 "("
  RangeSubselect@38..87
    SelectStmt@38..79
      Values@38..44 "values"
      Whitespace@44..45 " "
      Ascii40@45..46 "("
      List@46..79
        TypeCast@46..79
          AConst@46..64
            Sconst@46..64 "'{[1,6], [10,12]}'"
          Typecast@64..66 "::"
          TypeName@66..79
            Ident@66..79 "nummultirange"
    Ascii41@79..80 ")"
    Ascii41@80..81 ")"
    Whitespace@81..82 " "
    Alias@82..87
      Ident@82..83 "t"
      Ascii40@83..84 "("
      Ident@84..87 "nmr"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

