crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@474.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select range_intersect_agg(nmr) from nummultirange_test where nmr @> 4.0;
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..26 "range_intersect_agg"
      Ascii40@26..27 "("
      ColumnRef@27..30
        Ident@27..30 "nmr"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  From@32..36 "from"
  Whitespace@36..37 " "
  RangeVar@37..55
    Ident@37..55 "nummultirange_test"
  Whitespace@55..56 " "
  Where@56..61 "where"
  Whitespace@61..62 " "
  AExpr@62..72
    ColumnRef@62..65
      Ident@62..65 "nmr"
    Whitespace@65..66 " "
    Op@66..68 "@>"
    Whitespace@68..69 " "
    AConst@69..72
      Fconst@69..72 "4.0"
  Ascii59@72..73 ";"

