crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@475.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table nummultirange_test2(nmr nummultirange);
---
CreateStmt@0..52
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..32 "nummultirange_test2"
  Ascii40@32..33 "("
  ColumnDef@33..50
    Ident@33..36 "nmr"
    Whitespace@36..37 " "
    TypeName@37..50
      Ident@37..50 "nummultirange"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

