crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@476.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index nummultirange_test2_hash_idx on nummultirange_test2 using hash (nmr);
---
IndexStmt@0..82
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..41 "nummultirange_test2_h ..."
  Whitespace@41..42 " "
  On@42..44 "on"
  Whitespace@44..45 " "
  RangeVar@45..64
    Ident@45..64 "nummultirange_test2"
  Whitespace@64..65 " "
  Using@65..70 "using"
  Whitespace@70..71 " "
  Ident@71..75 "hash"
  Whitespace@75..76 " "
  Ascii40@76..77 "("
  IndexElem@77..80
    Ident@77..80 "nmr"
  Ascii41@80..81 ")"
  Ascii59@81..82 ";"

