crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@477.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test2 VALUES('{[, 5)}');"
---
InsertStmt@0..50
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "nummultirange_test2"
  Whitespace@31..32 " "
  SelectStmt@32..48
    Values@32..38 "VALUES"
    Ascii40@38..39 "("
    List@39..48
      AConst@39..48
        Sconst@39..48 "'{[, 5)}'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

